Tue Dec  5 13:28:10 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          If the gendir setting for the custom file is '.', then ommit the
          gendir setting.  This is required for version 3.4.45 of MPC.    

Tue Dec  5 12:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_socket.h:
          Removed check for ACE_LACKS_CMSG_DATA_MACRO which wasn't
          set in any configuration file. This also resulted in the
          removal of ACE_LACKS_CMSG_DATA_MEMBER because this define
          was never checked

        * ace/config-qnx-neutrino.h:
        * ace/config-qnx-rtp-62x.h:
        * ace/config-qnx-rtp-pre62x.h:
        * ace/config-tandem-nsk-mips-v2.h:
        * ace/config-tandem-nsk-mips-v3.h:
          Removed ACE_LACKS_CMSG_DATA_MEMBER, it has no impact at all

Tue Dec  5 11:25:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * ace/SStringfwd.h:

          Provide for annoying HP aCC 3.xx template bug.

Tue Dec  5 10:01:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lynxos.h:

          Improved LynxOS 4.2 support

Mon Dec  4 23:13:12 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Gestalt.cpp (init_i):

          Fixed bug#2735 and eliminated a potential memory leak of the
          list of already processed static services. The failure scenario
          is based on a case where static initializers register a bunch of
          service objects and then later the gestalt::open() is called. At
          that point, the abovementioned list is reinitialized and its
          contents was lost. See also the other failure scenario
          (bug#2701) for which a fix was put in on Nov 9 2006.

Mon Dec  4 18:00:16 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added a regression test for bug#2612
