@@ -66,7 +66,7 @@ ACE_OS::gettimeofday (void)
 #else
 # if defined (ACE_HAS_TIMEZONE_GETTIMEOFDAY) || \
   defined(ACE_HAS_VOIDPTR_GETTIMEOFDAY) || \
-  (defined (ACE_HAS_SVR4_GETTIMEOFDAY) && !defined (m88k) && !defined (SCO))
+  (defined (ACE_HAS_SVR4_GETTIMEOFDAY) && !defined (SCO))
   ACE_OSCALL (::gettimeofday (&tv, 0), int, -1, result);
 # elif defined (ACE_VXWORKS)
   // Assumes that struct timespec is same size as struct timeval,
